force-app/main/default/objects/School_c__x/School_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>Kashinath</externalDataSource>
    <externalName>School__c</externalName>
    <label>School</label>
    <pluralLabel>Schools</pluralLabel>
</CustomObject>