force-app/main/default/objects/School_c__x/fields/Admission_date_c__c.field-meta.xml
<CustomField>
    <fullName>Admission_date_c__c</fullName>
    <externalDeveloperName>Admission_date__c</externalDeveloperName>
    <label>Admission date</label>
    <type>Date</type>
</CustomField>