force-app/main/default/objects/School_c__x/fields/CLASS_c__c.field-meta.xml
<CustomField>
    <fullName>CLASS_c__c</fullName>
    <externalDeveloperName>CLASS__c</externalDeveloperName>
    <label>CLASS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>