force-app/main/default/objects/School_c__x/fields/CURR_c__c.field-meta.xml
<CustomField>
    <fullName>CURR_c__c</fullName>
    <externalDeveloperName>CURR__c</externalDeveloperName>
    <label>CURR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>