force-app/main/default/objects/School_c__x/fields/Fee_c__c.field-meta.xml
<CustomField>
    <fullName>Fee_c__c</fullName>
    <externalDeveloperName>Fee__c</externalDeveloperName>
    <label>Fee</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>