force-app/main/default/objects/School_c__x/fields/Primary_c__c.field-meta.xml
<CustomField>
    <fullName>Primary_c__c</fullName>
    <externalDeveloperName>Primary__c</externalDeveloperName>
    <label>CLASS</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>