force-app/main/default/objects/School_c__x/fields/Student_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Student_Name_c__c</fullName>
    <externalDeveloperName>Student_Name__c</externalDeveloperName>
    <label>Student Name</label>
    <type>TextArea</type>
</CustomField>